[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/Enemycarbra.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/items/alrt.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/Crab Enemy/Moving/CrabMoving1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Crab Enemy/Moving/CrabMoving2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Crab Enemy/Moving/CrabMoving3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Crab Enemy/Moving/CrabMoving4.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0824

[sub_resource type="RectangleShape2D" id=3]

[node name="Enemycarbra" type="KinematicBody2D"]
scale = Vector2( 3.48419, 4.46398 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.35088, 1.89128 )
scale = Vector2( 3.71061, 3.13142 )
frames = SubResource( 1 )
animation = "attack"
frame = 3
playing = true

[node name="kill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill"]
scale = Vector2( 1, 0.802866 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_exited" from="kill" to="." method="_on_kill_area_exited"]
[connection signal="body_entered" from="kill" to="." method="_on_kill_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
